--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.7.7",
+    "basiclightbox": "^5.0.4",
     "izitoast": "^1.4.0",
     "tui-pagination": "^3.4.1",
     "vite-plugin-full-reload": "^1.2.0",
